Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4145

HA Minor fixes to recovery

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.17
    • 0.18
    • C++ Clustering
    • None

    Description

      • Demote timed-out backups from ready to catch-up.
      • Don't cancel connected backups on timeout, only disconnected ones.
      • Don't allow promotion of a catch-up broker.
      • Minor logging improvement.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: